module(
    name = "switchyard",
    version = "0.1",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_libusb", version="0.1.0-rc1")

libusb = use_extension("@rules_libusb//:extensions.bzl", "libusb")

libusb.source_release(min_version = "1.0.27")
use_repo(libusb, "libusb")

